fix not scroll on firefox

--- a/frontend/web/less/desktop/landing.less
+++ b/frontend/web/less/desktop/landing.less
@@ -6,11 +6,13 @@
     height: 100%;
     // min-height: 100%;
     min-width: 200px;
+    display: block;
   }
   .map-padding{
     padding: 50px 0px 0px;
   }
   .map_content{
+    display: block;
     position: relative;
     width: 100%;
     height: 100%;
